[gd_scene load_steps=6 format=3 uid="uid://cq70shh7c8yl0"]

[ext_resource type="Script" path="res://world/camera/CameraBase.gd" id="1_ihj6j"]
[ext_resource type="Script" path="res://world/camera/CameraYaw.gd" id="2_8chq8"]
[ext_resource type="Script" path="res://world/camera/CameraTilt.gd" id="3_od011"]
[ext_resource type="Script" path="res://world/camera/ZoomBase.gd" id="4_mf4f5"]
[ext_resource type="Script" path="res://world/camera/Camera3D.gd" id="5_lndim"]

[node name="CameraBase" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.26363, 0, 3.92567)
script = ExtResource("1_ihj6j")

[node name="CameraYaw" type="Node3D" parent="."]
script = ExtResource("2_8chq8")

[node name="CameraTilt" type="Node3D" parent="CameraYaw"]
script = ExtResource("3_od011")

[node name="ZoomBase" type="Node3D" parent="CameraYaw/CameraTilt"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
script = ExtResource("4_mf4f5")

[node name="Camera3D" type="Camera3D" parent="CameraYaw/CameraTilt/ZoomBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100)
projection = 1
current = true
fov = 90.0
size = 11.394
near = 0.037
script = ExtResource("5_lndim")

[node name="sphereTestPointer" type="CSGSphere3D" parent="CameraYaw/CameraTilt"]
visible = false
radius = 0.2
radial_segments = 6
